fix: z-index conflicts

--- a/src/components/Stickers/stickers.css
+++ b/src/components/Stickers/stickers.css
@@ -4,6 +4,7 @@
   pointer-events: none;
   overflow: hidden;
   user-select: none;
+  z-index: 999;
 }
 
 .sticker {
